# rules_cpan

./: .bazelignore  .bazelrc  LICENSE.txt  MODULE.bazel  Readme.md
.github/workflows/: ci.yml
cpan/: extensions.bzl  install.bzl
example/: BUILD  MODULE.bazel  Readme.md  integration_test.sh  lcov.BUILD
lock/: BUILD  lock.py
